--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "devDependencies": {
-    "parcel-bundler": "1.9.4",
+    "parcel-bundler": "^1.9.4",
     "parcel-plugin-typescript": "^1.0.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
   },
   "name": "level-1-typescript",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "tslint": "^5.12.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html"
